# braincheck

./: .bazelrc  .gitattributes  .gitignore  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  REPO.bazel  allclasses-frame.html  allclasses-noframe.html  build.yaml  buildfile  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  package.json
core/src/main/java/org/realityforge/braincheck/: BUILD.bazel  BrainCheckConfig.java  BrainCheckConfig.native.js  BrainCheckTestUtil.java  BrainCheckUtil.java  DebuggerUtil.java  Guards.java  GwtIncompatible.java  StackTraceUtil.java  braincheck.js  package-info.java
core/src/test/gwt/: BUILD.bazel
core/src/test/j2cl/: BUILD.bazel  entry_point.js
core/src/test/java/org/realityforge/braincheck/: AbstractTest.java  BUILD.bazel  BrainCheckTestUtilTest.java  BrainCheckUtilTest.java  GuardRecorder.java  GuardsTest.java  StackTraceUtilTest.java  package-info.java
core/src/test/java/org/realityforge/braincheck/gwt/: BUILD.bazel  BrainCheckDevSmoke.gwt.xml  BrainCheckSmoke.gwt.xml  SmokeEntryPoint.java  package-info.java
etc/: secrets
jre/src/main/super/org/realityforge/braincheck/super/java/util/: BUILD.bazel  Objects.java
org/realityforge/braincheck/: AbstractTestNGMessageCollector.html  BrainCheckConfig.html  BrainCheckTestUtil.GuardType.html  BrainCheckTestUtil.OnGuardListener.html  BrainCheckTestUtil.html  GuardMessageCollector.html  Guards.html  package-frame.html  package-summary.html  package-tree.html
plans/bazel-migration/: 00-requirements.md  10-implementation-plan.md  20-task-board.yaml  30-output-contract.md
src-html/org/realityforge/braincheck/: AbstractTestNGMessageCollector.html  BrainCheckConfig.html  BrainCheckTestUtil.GuardType.html  BrainCheckTestUtil.OnGuardListener.html  BrainCheckTestUtil.html  GuardMessageCollector.html  Guards.html
src/main/java/org/realityforge/arez/: Arez.gwt.xml  ArezConfig.java  ArezDev.gwt.xml  ArezUtil.java  Guards.java  package-info.java
src/main/java/org/realityforge/braincheck/: AbstractTestNGMessageCollector.java  AssertUtil.java  BrainCheck.gwt.xml  BrainCheckConfig.java  BrainCheckConfig.native.js  BrainCheckDev.gwt.xml  BrainCheckTestUtil.java  BrainCheckUtil.java  Config.java  DebuggerUtil.java  GuardMessageCollector.java  Guards.java  GwtIncompatible.java  StackTraceUtil.java  braincheck.js
src/main/resources/org/realityforge/braincheck/sprsrc/org/realityforge/braincheck/: AssertUtil.java  BrainCheckConfig.java
src/main/super/org/realityforge/braincheck/super/java/util/: Objects.java
src/test/java/org/realityforge/arez/: AbstractArezTest.java
src/test/java/org/realityforge/braincheck/: AbstractBraincheckTest.java  AbstractTest.java  BrainCheckTestUtilTest.java  BrainCheckUtilTest.java  GuardMessageCollectorTest.java  GuardsTest.java  StackTraceUtilTest.java
tasks/: bazel_test.rake  gwt.rake  package_for_maven_central.rake  release.rake  staging.rake
testng/src/main/java/org/realityforge/braincheck/: AbstractTestNGMessageCollector.java  BUILD.bazel  GuardMessageCollector.java
testng/src/test/java/org/realityforge/braincheck/: BUILD.bazel  GuardMessageCollectorTest.java
tools/: check.sh  java_format.sh  update_java_deps.sh
tools/intellij/: .managed.bazelproject
tools/java-format/: BUILD.bazel
tools/release/: BUILD.bazel  README.md  finalize_release.sh  prepare_release.sh  release.bzl  upload_maven_central.sh
tools/release/org/realityforge/braincheck/release/: BUILD.bazel  DistBuilder.java  DistBuilderTest.java  JarBuilder.java  JarBuilderTest.java  JavadocJarBuilder.java  ReleaseArtifactsIntegrationTest.java  ReleaseLifecycleTool.java  ReleaseLifecycleToolTest.java  package-info.java
