load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

WARNINGS = [
    "+unsorted-dict-items",
    "-module-docstring",
    "-function-docstring",
]

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
        "./.bazelbsp/*",
    ],
    lint_mode = "fix",
    lint_warnings = WARNINGS,
)

buildifier(
    name = "buildifier_check",
    diff_command = "diff -u",
    exclude_patterns = [
        "./.git/*",
        "./.bazelbsp/*",
    ],
    lint_mode = "warn",
    lint_warnings = WARNINGS,
    mode = "diff",
)

filegroup(
    name = "artifacts",
    srcs = [
        "//core/src/main/java/org/realityforge/braincheck:core",
        "//jre/src/main/super/org/realityforge/braincheck/super/java/util:jre_sources",
        "//testng/src/main/java/org/realityforge/braincheck:testng",
    ],
)

test_suite(
    name = "all_tests",
    tests = [
        "//core/src/test/java/org/realityforge/braincheck:all_tests",
        "//testng/src/test/java/org/realityforge/braincheck:all_tests",
    ],
)
