load("//third_party/java:rules.bzl", "java_binary", "java_test")

package(default_visibility = ["//visibility:public"])

MAVEN_ARTIFACT_ARGS = [
    "$(rootpath //tools/release:release_version)",
    "$(rootpath //tools/release:braincheck_core_jar)",
    "$(rootpath //tools/release:braincheck_core_sources_jar)",
    "$(rootpath //tools/release:braincheck_core_javadoc_jar)",
    "$(rootpath //tools/release:braincheck_core_pom)",
    "$(rootpath //tools/release:braincheck_jre_jar)",
    "$(rootpath //tools/release:braincheck_jre_sources_jar)",
    "$(rootpath //tools/release:braincheck_jre_pom)",
    "$(rootpath //tools/release:braincheck_testng_jar)",
    "$(rootpath //tools/release:braincheck_testng_sources_jar)",
    "$(rootpath //tools/release:braincheck_testng_javadoc_jar)",
    "$(rootpath //tools/release:braincheck_testng_pom)",
]

MAVEN_ARTIFACT_DATA = [
    "//tools/release:braincheck_core_jar",
    "//tools/release:braincheck_core_javadoc_jar",
    "//tools/release:braincheck_core_pom",
    "//tools/release:braincheck_core_sources_jar",
    "//tools/release:braincheck_jre_jar",
    "//tools/release:braincheck_jre_pom",
    "//tools/release:braincheck_jre_sources_jar",
    "//tools/release:braincheck_testng_jar",
    "//tools/release:braincheck_testng_javadoc_jar",
    "//tools/release:braincheck_testng_pom",
    "//tools/release:braincheck_testng_sources_jar",
    "//tools/release:release_version",
]

DIST_ARTIFACT_ARGS = [
    "$(rootpath :test-version.txt)",
] + MAVEN_ARTIFACT_ARGS[1:]

java_binary(
    name = "jar_builder",
    srcs = [
        "JarBuilder.java",
        "package-info.java",
    ],
    main_class = "org.realityforge.braincheck.release.JarBuilder",
)

java_binary(
    name = "javadoc_jar_builder",
    srcs = [
        "JavadocJarBuilder.java",
        "package-info.java",
    ],
    main_class = "org.realityforge.braincheck.release.JavadocJarBuilder",
)

java_binary(
    name = "dist",
    srcs = [
        "DistBuilder.java",
        "package-info.java",
    ],
    args = [
        "--version-file",
        "$(rootpath //tools/release:release_version)",
        "--artifact",
        "braincheck-core:jar=$(rootpath //tools/release:braincheck_core_jar)",
        "--artifact",
        "braincheck-core:sources=$(rootpath //tools/release:braincheck_core_sources_jar)",
        "--artifact",
        "braincheck-core:javadoc=$(rootpath //tools/release:braincheck_core_javadoc_jar)",
        "--artifact",
        "braincheck-core:pom=$(rootpath //tools/release:braincheck_core_pom)",
        "--artifact",
        "braincheck-jre:jar=$(rootpath //tools/release:braincheck_jre_jar)",
        "--artifact",
        "braincheck-jre:sources=$(rootpath //tools/release:braincheck_jre_sources_jar)",
        "--artifact",
        "braincheck-jre:pom=$(rootpath //tools/release:braincheck_jre_pom)",
        "--artifact",
        "braincheck-testng:jar=$(rootpath //tools/release:braincheck_testng_jar)",
        "--artifact",
        "braincheck-testng:sources=$(rootpath //tools/release:braincheck_testng_sources_jar)",
        "--artifact",
        "braincheck-testng:javadoc=$(rootpath //tools/release:braincheck_testng_javadoc_jar)",
        "--artifact",
        "braincheck-testng:pom=$(rootpath //tools/release:braincheck_testng_pom)",
    ],
    data = MAVEN_ARTIFACT_DATA,
    main_class = "org.realityforge.braincheck.release.DistBuilder",
)

java_binary(
    name = "release_lifecycle",
    srcs = [
        "ReleaseLifecycleTool.java",
        "package-info.java",
    ],
    main_class = "org.realityforge.braincheck.release.ReleaseLifecycleTool",
)

java_test(
    name = "release_artifacts_integration_test",
    size = "small",
    srcs = [
        "ReleaseArtifactsIntegrationTest.java",
        "package-info.java",
    ],
    args = MAVEN_ARTIFACT_ARGS,
    data = MAVEN_ARTIFACT_DATA,
    main_class = "org.realityforge.braincheck.release.ReleaseArtifactsIntegrationTest",
    use_testrunner = False,
)

java_test(
    name = "dist_builder_test",
    size = "small",
    srcs = [
        "DistBuilder.java",
        "DistBuilderTest.java",
        "package-info.java",
    ],
    args = DIST_ARTIFACT_ARGS,
    data = MAVEN_ARTIFACT_DATA + [":test-version.txt"],
    main_class = "org.realityforge.braincheck.release.DistBuilderTest",
    use_testrunner = False,
)

java_test(
    name = "jar_builder_test",
    size = "small",
    srcs = [
        "JarBuilder.java",
        "JarBuilderTest.java",
        "package-info.java",
    ],
    main_class = "org.realityforge.braincheck.release.JarBuilderTest",
    use_testrunner = False,
)

java_test(
    name = "release_lifecycle_tool_test",
    size = "small",
    srcs = [
        "ReleaseLifecycleTool.java",
        "ReleaseLifecycleToolTest.java",
        "package-info.java",
    ],
    main_class = "org.realityforge.braincheck.release.ReleaseLifecycleToolTest",
    use_testrunner = False,
)
