load("@j2cl//build_defs:rules.bzl", "j2cl_library")
load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "core",
    srcs = [
        "BrainCheckConfig.java",
        "BrainCheckTestUtil.java",
        "BrainCheckUtil.java",
        "DebuggerUtil.java",
        "Guards.java",
        "GwtIncompatible.java",
        "StackTraceUtil.java",
        "package-info.java",
    ],
    resources = [
        "BrainCheck.gwt.xml",
        "BrainCheckConfig.native.js",
        "BrainCheckDev.gwt.xml",
        "braincheck.js",
    ],
    deps = [
        "//third_party/java:jsinterop_annotations",
    ],
)

j2cl_library(
    name = "core-j2cl",
    srcs = [
        "BrainCheckConfig.java",
        "BrainCheckConfig.native.js",
        "BrainCheckTestUtil.java",
        "BrainCheckUtil.java",
        "DebuggerUtil.java",
        "Guards.java",
        "GwtIncompatible.java",
        "StackTraceUtil.java",
        "braincheck.js",
        "package-info.java",
    ],
    experimental_enable_jspecify_support_do_not_enable_without_jspecify_static_checking_or_you_might_cause_an_outage = True,
    deps = [
        "//third_party/java:jsinterop_annotations-j2cl",
        "//third_party/java:jspecify-j2cl",
    ],
)
