load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "testng",
    srcs = [
        "AbstractTestNGMessageCollector.java",
        "GuardMessageCollector.java",
    ],
    deps = [
        "//core/src/main/java/org/realityforge/braincheck:core",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:testng",
    ],
)
